@@ -1,0 +1,45 @@
+﻿########################################################
+# girlfriendvideos VideoPortal
+########################################################
+start=http://www.girlfriendvideos.com/
+catcher=gfvideos.com
+########################################################
+# Videos
+########################################################
+item_infos=<a href="(/members/.+?php)" class="vtt">([^<]+)<.+?img src="([^"]+)".+?div class="vlen">.+?(\d+:\d+)
+item_order=url|title|icon|title.append
+item_info_name=title.append
+item_info_build= (%s)
+item_info_name=icon
+item_info_build=video.devil.image|face_devil_grin.png
+item_info_name=icon
+item_info_build=http://www.girlfriendvideos.com%s
+item_info_name=type
+item_info_build=video
+item_url_build=http://www.girlfriendvideos.com%s
+########################################################
+# Categories
+########################################################
+item_infos=<a href="(/pages/[^"]+/1.php)">([^"]+)</a>
+item_order=url|title
+item_skill=rss
+item_url_build=http://www.girlfriendvideos.com/%s
+########################################################
+# Direct Links
+########################################################
+title=video.devil.locale|30100
+type=once
+icon=video.devil.image|face_kiss.png
+url=http://www.girlfriendvideos.com/categories.php
+########################################################
+# Next
+########################################################
+item_infos=<a href="(\d+.php)">Next Page</a>
+item_order=url
+item_skill=space|lock
+item_info_name=title
+item_info_build=video.devil.locale|30103
+item_info_name=icon
+item_info_build=video.devil.image|next.png
+item_url_build=http://www.girlfriendvideos.com/%s
+########################################################
