@@ -42,7 +42,7 @@ item_url_build=http://www.moviesand.com%s
 ########################################################
 # Next
 ########################################################
-item_infos=<div class="page-link">\d+</div>  <div class="page-link"><a href="([^"]+/\d+.html)">\d+</a>
+item_infos=<span class="page-link">\d+</span>  <span class="page-link"><a href="([^"]+/\d+.html)">\d+</a>
 item_order=url
 item_skill=space|lock
 item_info_name=title
